www/app/stylus/components/navigation/_mobileMenu.styl
.mobile-menu {
    position: fixed;
    bottom: 0;
    left: 0;
    z-index: 901;
    background: white;
    width: 100%;

    .mobile-menu-items {
        display: flex;
        padding: 0;
        margin: 0;
    }
}

.mobile-menu-item {
    width: 100%;
    color: #333;
    list-style: none;
    text-align: center;
    padding: 14px 0;
    position: relative;
    padding-bottom: 8px;
    outline: none !important;

    .mobile-menu-item-text {
        display: inline-block;
        width: 100%;
        font-size: 11px;
        position: relative;
        top: -2px;
    }

    &.icon-only {
        padding-top: 20px;
       &:before {
            content: '';
            width: 99%;
            height: 100%;
            border-radius: 50%;
            background: white;
            position: absolute;
            top: 20px;
            left: 50%;
            transform: translate(-50%, -50%);
            z-index: -1;

            @media screen and (min-width: 600px) {
                top: 15px;
                width: 60%;
            }
        }
    }


    &.rounded {
        background: white;

        &:before {
            content: '';
            width: 80%;
            height: 100%;
            border-radius: 50%;
            background: white;
            position: absolute;
            top: 20px;
            left: 50%;
            transform: translate(-50%, -50%);
            z-index: -1;
        }
    }
}

.mobile-menu-indicator {
    position: absolute;
    transition: .5s left;
    z-index: 902;
    bottom: 0;
    left: 0;
    width: 100px;
    height: 4px;
    background: red;
}

